--- a/contents/dimension/04-others.html
+++ b/contents/dimension/04-others.html
@@ -85,6 +85,7 @@ window.Quarto = {
   typesetMath
 };
 </script><meta property="og:title" content="Divers – STT-2200: Analyse de données">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -610,7 +611,8 @@ window.Quarto = {
   
 
 
-</header><section id="t-sne" class="level2"><h2 class="anchored" data-anchor-id="t-sne">
+</header><p>L’idée est de présenter rapidement d’autres méthodes de changement de dimension.</p>
+<section id="t-sne" class="level2"><h2 class="anchored" data-anchor-id="t-sne">
 <span class="math inline">\(t\)</span>-SNE</h2>
 </section><section id="umap" class="level2"><h2 class="anchored" data-anchor-id="umap">UMAP</h2>
 
